# Documents/SUNNU_MBAYE_MI/routes/api.php
@@ -29,39 +29,33 @@ Route::post('inscrirption', [UserController::class ,'inscription']);
 Route::post('login', [UserController::class ,'login']);
 Route::post('logout', [UserController::class ,'logout']);
 Route::put('/updateUser/{id}',[UserController::class ,'updateUser'] );
+Route::get('/listeUser',[UserController::class ,'listeUser'] );
 //anonce
-Route::post('/ajoutAnnonce', [AnnonceController::class ,'ajoutAnnonce']);
-Route::put('/modifierAnnonce/{id}',[AnnonceController::class ,'modifierAnnonce']);
-Route::delete('/supAnnonce/{id}', [AnnonceController::class ,'supprimerAnnonce']);
+
 Route::get('/listAnnonce', [AnnonceController::class ,'listAnnonce']);
 Route::get('/voirPlus/{annonce_id}', [AnnonceController::class ,'voirPlus']);
 //categorie
-Route::put('/modifieCategorie/{id}', [CategorieController::class ,'modifieCategorie']);
-Route::delete('/supCategorie/{id}', [CategorieController::class ,'destroy']);
+
 Route::get('/voiplusCategorie/{id}', [CategorieController::class ,'voiplusCategorie']);
 Route::get('/listeCategorie', [CategorieController::class ,'listeCategorie']);
 //produit
-Route::get('listeProduit', [ProduitController::class ,'listeProduit']);
-Route::put('updateproduit/{id}', [ProduitController::class ,'updateproduit']);
-Route::put('supProduit/{id}', [ProduitController::class ,'supProduit']);
+
+Route::get('Produitrecherche', [ProduitController::class ,'Produitrecherche']);
 Route::get('rechercheProduit', [ProduitController::class ,'rechercheProduit']);
+Route::get('listeProduit', [ProduitController::class ,'listeProduit']);
+
 // Route::delete('/listeCategorie', [ProduitController::class ,'listeCategorie']);
 //pagner
-
-
-
-//commender 
-Route::post('/effectuerCommande', [DetailCommendeController::class, 'effectuerCommande']);
 Route::get('/AfficheCommende', [DetailCommendeController::class, 'AfficheCommende']);
 Route::get('/voirplus/{commende_id}', [DetailCommendeController::class, 'voirplus']);
-Route::delete('/suprimmerCommende/{commende_id}', [DetailCommendeController::class, 'suprimmerCommende']);
-Route::put('/LivraisonTerminer/{commende_id}', [DetailCommendeController::class, 'LivraisonTerminer']);
-Route::put('/AnnulerLivraison/{commende_id}', [DetailCommendeController::class, 'AnnulerLivraison']);
+
+
+
 
 
 Route::middleware('auth:api')->group( function (){
    
-    Route::post('/AjoutCategorie', [CategorieController::class ,'AjoutCategorie']);
+    // Route::post('/AjoutCategorie', [CategorieController::class ,'AjoutCategorie']);
     
 
     
@@ -71,15 +65,34 @@ Route::POST('/AjoutPanier/{produit_id}', [PanierController::class, 'AjoutPanier'
 Route::get('/AfficherPanier', [PanierController::class, 'AfficherPanier']);
 Route::delete('/viderPanier/{produit_id}', [PanierController::class, 'viderPanier']);
 Route::delete('/validerPanier/{panier_id}', [PanierController::class, 'validerPanier']);
-Route::post('AjoutProduit', [ProduitController::class ,'AjoutProduit']);
+//commender 
+Route::post('/effectuerCommande', [DetailCommendeController::class, 'effectuerCommande']);
+Route::put('/AnnulerLivraison/{commende_id}', [DetailCommendeController::class, 'AnnulerLivraison']);
 
 
 });
+
+
 Route::middleware(['auth','nom_role:agriculteur'])->group(function () {
+Route::post('AjoutProduit', [ProduitController::class ,'AjoutProduit']);
+Route::put('updateproduit/{id}', [ProduitController::class ,'updateproduit']);
+Route::put('supProduit/{id}', [ProduitController::class ,'supProduit']);
 
 });
+
+
 Route::middleware(['auth','nom_role:admin'])->group(function () {
-    Route::post('/AjoutCategorie', [CategorieController::class ,'AjoutCategorie']);
+Route::post('/AjoutCategorie', [CategorieController::class ,'AjoutCategorie']);
+
+Route::delete('/suprimmerCommende/{commende_id}', [DetailCommendeController::class, 'suprimmerCommende']);
+Route::put('/LivraisonTerminer/{commende_id}', [DetailCommendeController::class, 'LivraisonTerminer']);
+//annonce
+Route::post('/ajoutAnnonce', [AnnonceController::class ,'ajoutAnnonce']);
+Route::put('/modifierAnnonce/{id}',[AnnonceController::class ,'modifierAnnonce']);
+Route::delete('/supAnnonce/{id}', [AnnonceController::class ,'supprimerAnnonce']);
+//categorie
+Route::put('/modifieCategorie/{id}', [CategorieController::class ,'modifieCategorie']);
+Route::delete('/supCategorie/{id}', [CategorieController::class ,'destroy']);
 
 });
 
